Substitute telegrambot by a submodule
from telegrambot repo

--- a/.github/workflows/build-and-push-to-dockerhub-deploy-on-host.yaml
+++ b/.github/workflows/build-and-push-to-dockerhub-deploy-on-host.yaml
@@ -57,6 +57,8 @@ jobs:
         git rev-parse --verify --quiet $BRANCH &&
         git checkout $BRANCH  &&
         git merge origin/$BRANCH  &&
+        git submodule sync &&
+        git submodule update --init --recursive &&
         docker compose down  &&
         docker system prune -af  &&
         cat telegrambot-entrypoint/webhook-setup.sh telegrambot-entrypoint/nginx-setup.sh | tee telegrambot/entrypoint.sh &&
