--- a/.github/workflows/build-and-push-to-dockerhub-deploy-on-host.yaml
+++ b/.github/workflows/build-and-push-to-dockerhub-deploy-on-host.yaml
@@ -27,14 +27,12 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Set up Docker Buildx with QEMU
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-        with:
-          platforms: linux/arm64
 
       - name: Build and push arm64 image
         run: |
-          docker buildx bake --push --file docker-compose.yml
+          docker buildx bake --push --file docker-compose.yml --set *.platform=linux/arm64/v8
 
   deploy-on-host:
     runs-on: self-hosted
