--- a/.github/workflows/sphinx-docs.yml
+++ b/.github/workflows/sphinx-docs.yml
@@ -16,6 +16,7 @@ jobs:
       - name: Checkout Main Branch
         uses: actions/checkout@v3
         with:
+          submodules: 'recursive'
           path: 'main_repo'
 
       - name: Set up Python
@@ -42,6 +43,7 @@ jobs:
       - name: Checkout Documentation Branch
         uses: actions/checkout@v3
         with:
+          submodules: 'recursive'
           ref: 'gh-pages'
           path: 'gh_pages_repo'
 
