--- a/.github/workflows/build-and-push-to-dockerhub-deploy-on-host.yaml
+++ b/.github/workflows/build-and-push-to-dockerhub-deploy-on-host.yaml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Build and push arm64 image
         run: |
-          docker buildx bake --push --file docker-compose.yml --set *.platform=linux/arm64/v8
+          docker buildx bake --push --file docker-compose.yml --set *.platform=linux/amd64,linux/arm64/v8
 
   deploy-on-host:
     runs-on: self-hosted
