--- a/.github/workflows/build-and-push-to-dockerhub-deploy-on-host.yaml
+++ b/.github/workflows/build-and-push-to-dockerhub-deploy-on-host.yaml
@@ -30,7 +30,7 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build and push arm64 image
+      - name: Build and push arm64 and amd64 images
         run: |
           docker buildx bake --push --file docker-compose.yml --set *.platform=linux/amd64,linux/arm64/v8
 
