bugfix: add two steps for build for arm/amd archs

--- a/.github/workflows/build-and-push-to-dockerhub-deploy-on-host.yaml
+++ b/.github/workflows/build-and-push-to-dockerhub-deploy-on-host.yaml
@@ -30,9 +30,17 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build and push arm64 and amd64 images
+      - name: Build & push arm64
         run: |
-          docker buildx bake --push --file docker-compose.yml --set *.platform=linux/amd64,linux/arm64/v8
+          docker buildx bake --push --file docker-compose.yml
+            --set *.tags=$IMAGE:arm64
+            --set *.platform=linux/arm64/v8
+
+      - name: Build & push amd64
+        run: |
+          docker buildx bake --push --file docker-compose.yml
+            --set *.tags=$IMAGE:amd64
+            --set *.platform=linux/amd64
 
   deploy-on-host:
     runs-on: self-hosted
